// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontIcon should apply the correct class names 1`] = `
<i
  aria-hidden="true"
  class="rmd-icon rmd-icon--font material-icons"
/>
`;

exports[`FontIcon should apply the correct class names 2`] = `
<i
  aria-hidden="true"
  class="rmd-icon rmd-icon--font rmd-icon--dense material-icons test-thing"
/>
`;

exports[`FontIcon should apply the correct class names 3`] = `
<i
  aria-hidden="true"
  class="rmd-icon rmd-icon--font rmd-icon--dense fa fa-github test-thing"
/>
`;

exports[`FontIcon should render correctly 1`] = `
<i
  aria-hidden="true"
  className="rmd-icon rmd-icon--font material-icons"
>
  home
</i>
`;

exports[`FontIcon should render correctly 2`] = `
<i
  aria-hidden="true"
  className="rmd-icon rmd-icon--font fa fa-github"
/>
`;
